--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header>
-               <h1>Exemple practice <br> Proiectarea si dezvoltarea web</header>
-    </h1>
+               <h1>Exemple practice <br> Proiectarea si dezvoltarea web</h1>
+    </header>
+    
     <section>
         <ul>
             <li>
@@ -54,8 +55,9 @@
             </li>
         </ul>
     </nav>
+    </section>
     <footer>
-      Gabură Nadejda &copy; Tekwill, 2021
+     <p>Gabură Nadejda &copy; Tekwill, 2021</p>
     </footer>
 </body>
 </html>
